// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultPanel renders empty state 1`] = `
<View
  accessibilityRole="summary"
  style={
    {
      "backgroundColor": "#11161F",
      "borderColor": "rgba(255, 255, 255, 0.08)",
      "borderRadius": 12,
      "borderWidth": 1,
      "minHeight": 160,
      "padding": 24,
    }
  }
  testID="result"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "column",
          "gap": 8,
          "justifyContent": "flex-start",
        },
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#8B949E",
            "fontFamily": "System",
            "fontSize": 22,
            "fontWeight": "600",
            "letterSpacing": 0,
            "lineHeight": 28,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Enter weight and CG to see result
    </Text>
  </View>
</View>
`;

exports[`ResultPanel renders error state 1`] = `
<View
  accessibilityRole="summary"
  style={
    {
      "backgroundColor": "#11161F",
      "borderColor": "rgba(255, 255, 255, 0.08)",
      "borderRadius": 12,
      "borderWidth": 1,
      "minHeight": 160,
      "padding": 24,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "column",
          "gap": 8,
          "justifyContent": "flex-start",
        },
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#8B949E",
            "fontFamily": "System",
            "fontSize": 22,
            "fontWeight": "600",
            "letterSpacing": 0,
            "lineHeight": 28,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Calculation unavailable
    </Text>
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#6E7681",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 22,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Reference data could not be loaded.
    </Text>
  </View>
</View>
`;

exports[`ResultPanel renders idle state in light theme 1`] = `
<View
  accessibilityRole="summary"
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderColor": "rgba(0, 0, 0, 0.08)",
      "borderRadius": 12,
      "borderWidth": 1,
      "minHeight": 160,
      "padding": 24,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "stretch",
          "flexDirection": "column",
          "gap": 12,
          "justifyContent": "flex-start",
        },
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#00C2A8",
            "fontFamily": "System",
            "fontSize": 12,
            "fontWeight": "600",
            "letterSpacing": 0.6,
            "lineHeight": 16,
            "textAlign": "auto",
          },
          undefined,
        ]
      }
    >
      Max crosswind · Landing
    </Text>
    <View
      style={
        [
          {
            "alignItems": "baseline",
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "gap": 8,
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    >
      <Text
        accessibilityLabel="27 KT"
        allowFontScaling={false}
        style={
          [
            {
              "color": "#00C2A8",
              "fontFamily": "Menlo",
              "fontSize": 48,
              "fontWeight": "700",
              "letterSpacing": -0.5,
              "lineHeight": 56,
              "textAlign": "auto",
            },
            undefined,
          ]
        }
      >
        27
      </Text>
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#00C2A8",
              "fontFamily": "System",
              "fontSize": 22,
              "fontWeight": "600",
              "letterSpacing": 0,
              "lineHeight": 28,
              "textAlign": "auto",
            },
            undefined,
          ]
        }
      >
        KT
      </Text>
    </View>
  </View>
</View>
`;

exports[`ResultPanel renders idle state with full metadata in dark theme 1`] = `
<View
  accessibilityRole="summary"
  style={
    {
      "backgroundColor": "#11161F",
      "borderColor": "rgba(255, 255, 255, 0.08)",
      "borderRadius": 12,
      "borderWidth": 1,
      "minHeight": 160,
      "padding": 24,
    }
  }
  testID="result"
>
  <View
    style={
      [
        {
          "alignItems": "stretch",
          "flexDirection": "column",
          "gap": 12,
          "justifyContent": "flex-start",
        },
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#00C2A8",
            "fontFamily": "System",
            "fontSize": 12,
            "fontWeight": "600",
            "letterSpacing": 0.6,
            "lineHeight": 16,
            "textAlign": "auto",
          },
          undefined,
        ]
      }
    >
      Max crosswind · Landing
    </Text>
    <View
      style={
        [
          {
            "alignItems": "baseline",
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "gap": 8,
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    >
      <Text
        accessibilityLabel="27 KT"
        allowFontScaling={false}
        style={
          [
            {
              "color": "#00C2A8",
              "fontFamily": "Menlo",
              "fontSize": 48,
              "fontWeight": "700",
              "letterSpacing": -0.5,
              "lineHeight": 56,
              "textAlign": "auto",
            },
            undefined,
          ]
        }
      >
        27
      </Text>
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#00C2A8",
              "fontFamily": "System",
              "fontSize": 22,
              "fontWeight": "600",
              "letterSpacing": 0,
              "lineHeight": 28,
              "textAlign": "auto",
            },
            undefined,
          ]
        }
      >
        KT
      </Text>
    </View>
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#6E7681",
            "fontFamily": "System",
            "fontSize": 12,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 16,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Computed for current inputs
    </Text>
    <View
      style={
        {
          "borderTopColor": "rgba(255, 255, 255, 0.08)",
          "borderTopWidth": 1,
          "paddingTop": 12,
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "gap": 12,
              "justifyContent": "flex-start",
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "flexBasis": "48%",
              "gap": 4,
            }
          }
        >
          <Text
            allowFontScaling={true}
            style={
              [
                {
                  "color": "#6E7681",
                  "fontFamily": "System",
                  "fontSize": 12,
                  "fontWeight": "600",
                  "letterSpacing": 0.6,
                  "lineHeight": 16,
                  "textAlign": "auto",
                },
                undefined,
              ]
            }
          >
            Weight
          </Text>
          <Text
            allowFontScaling={true}
            style={
              [
                {
                  "color": "#E6EDF3",
                  "fontFamily": "Menlo",
                  "fontSize": 16,
                  "fontWeight": "500",
                  "letterSpacing": 0,
                  "lineHeight": 22,
                  "textAlign": "auto",
                },
                undefined,
              ]
            }
          >
            170 t
          </Text>
        </View>
        <View
          style={
            {
              "flexBasis": "48%",
              "gap": 4,
            }
          }
        >
          <Text
            allowFontScaling={true}
            style={
              [
                {
                  "color": "#6E7681",
                  "fontFamily": "System",
                  "fontSize": 12,
                  "fontWeight": "600",
                  "letterSpacing": 0.6,
                  "lineHeight": 16,
                  "textAlign": "auto",
                },
                undefined,
              ]
            }
          >
            CG
          </Text>
          <Text
            allowFontScaling={true}
            style={
              [
                {
                  "color": "#E6EDF3",
                  "fontFamily": "Menlo",
                  "fontSize": 16,
                  "fontWeight": "500",
                  "letterSpacing": 0,
                  "lineHeight": 22,
                  "textAlign": "auto",
                },
                undefined,
              ]
            }
          >
            25.5 %MAC
          </Text>
        </View>
        <View
          style={
            {
              "flexBasis": "48%",
              "gap": 4,
            }
          }
        >
          <Text
            allowFontScaling={true}
            style={
              [
                {
                  "color": "#6E7681",
                  "fontFamily": "System",
                  "fontSize": 12,
                  "fontWeight": "600",
                  "letterSpacing": 0.6,
                  "lineHeight": 16,
                  "textAlign": "auto",
                },
                undefined,
              ]
            }
          >
            Runway
          </Text>
          <Text
            allowFontScaling={true}
            style={
              [
                {
                  "color": "#E6EDF3",
                  "fontFamily": "Menlo",
                  "fontSize": 16,
                  "fontWeight": "500",
                  "letterSpacing": 0,
                  "lineHeight": 22,
                  "textAlign": "auto",
                },
                undefined,
              ]
            }
          >
            Dry
          </Text>
        </View>
        <View
          style={
            {
              "flexBasis": "48%",
              "gap": 4,
            }
          }
        >
          <Text
            allowFontScaling={true}
            style={
              [
                {
                  "color": "#6E7681",
                  "fontFamily": "System",
                  "fontSize": 12,
                  "fontWeight": "600",
                  "letterSpacing": 0.6,
                  "lineHeight": 16,
                  "textAlign": "auto",
                },
                undefined,
              ]
            }
          >
            RWYCC
          </Text>
          <Text
            allowFontScaling={true}
            style={
              [
                {
                  "color": "#E6EDF3",
                  "fontFamily": "Menlo",
                  "fontSize": 16,
                  "fontWeight": "500",
                  "letterSpacing": 0,
                  "lineHeight": 22,
                  "textAlign": "auto",
                },
                undefined,
              ]
            }
          >
            6
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "backgroundColor": "#0D1117",
          "borderColor": "rgba(255, 255, 255, 0.08)",
          "borderRadius": 4,
          "borderWidth": 1,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
          "position": "absolute",
          "right": 12,
          "top": 12,
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#8B949E",
              "fontFamily": "System",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 16,
              "textAlign": "auto",
            },
            undefined,
          ]
        }
      >
        Reference: 787 FCOM
      </Text>
    </View>
  </View>
</View>
`;

exports[`ResultPanel renders out-of-envelope state 1`] = `
<View
  accessibilityRole="summary"
  style={
    {
      "backgroundColor": "#11161F",
      "borderColor": "rgba(255, 255, 255, 0.08)",
      "borderRadius": 12,
      "borderWidth": 1,
      "minHeight": 160,
      "padding": 24,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "column",
          "gap": 8,
          "justifyContent": "flex-start",
        },
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#8B949E",
            "fontFamily": "System",
            "fontSize": 22,
            "fontWeight": "600",
            "letterSpacing": 0,
            "lineHeight": 28,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Weight 95 t is below minimum 110 t. Adjust input.
    </Text>
  </View>
</View>
`;
